Fix personal-image overflow

--- a/src/components/welcomeSection/WelcomeSection.scss
+++ b/src/components/welcomeSection/WelcomeSection.scss
@@ -10,17 +10,6 @@
 
   overflow: hidden;
 
-  .test-bg {
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: url('/src/assets/bg_code.png');
-    opacity: .1;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-  }
-
   .about-me-wrapper {
     display: flex;
     flex-direction: column;
@@ -28,7 +17,7 @@
 
   .personal-image {
     width: 100%;
-    max-width: 500px;
+    max-width: 350px;
   }
 
   .buttons-wrap {
@@ -44,5 +33,10 @@
     flex-direction: row;
     gap: 2rem;
     padding: 60px;
+
+    .personal-image {
+      width: 100%;
+      max-width: 500px;
+    }
   }
 }
